Icon alignment fix not needed anymore?

--- a/static/css/themes/fonts.css
+++ b/static/css/themes/fonts.css
@@ -147,7 +147,7 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
